--- a/style.css
+++ b/style.css
@@ -1,120 +1,348 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    font-family: "Red Hat Display", sans-serif;
-    text-decoration: none;
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fjalla+One&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  font-family: "Red Hat Display", sans-serif;
+  text-decoration: none;
 }
 
 html {
-    height: 100%;
-    position: relative;
+  height: 100%;
+  position: relative;
 }
 
-body{
-    background-image: url("img/VINILO.png");
-    background-repeat: repeat;
-    background-size: 440px;
-    background-position: 20px 50px;
-    
+body {
+  background-image: url("img/VINILO.png");
+  background-repeat: repeat;
+  background-size: 410px 405px;
+  background-position: -80px 52px;
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  justify-content: center;
+  align-items: center;
 }
 
-footer p {
-color: #ffff;
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 5px 200px;
+  width: 100%;
 }
 
-footer{
-    background-color: #000;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+#lista {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5rem;
 }
 
-nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 5px 200px;
-    
-    
-    
+#lista a {
+  color: #000;
+  font-weight: 600;
 }
 
-#lista{
-display: flex;
-flex-direction: row;
-align-items: center;
-gap: 5rem;
+#lista a:hover {
+  color: #615f5f;
 }
 
-#lista a{
-    color: #000;
-    font-weight: 600;
+picture {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: center;
+  color: #ffff;
+}
+picture > img {
+  width: 70px;
+}
+picture > h1 {
+  color: #000;
+  font-weight: 500;
+  font-size: 30px;
+  font-family: "Fjalla One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-#lista a:hover{
-    color: #615f5f;
+#botones {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  margin-right: -60px;
 }
 
-picture{
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    align-items: center;
-    color: #ffff;
-}
-picture>img{
-    width: 70px;
-    
-}
-picture>h1{
-    color: #000;
-    font-weight: 500;
-    font-size: 30px;
-    font-family: "Fjalla One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+#botones > button {
+  border: none;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
 }
 
-#botones{
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    margin-right: -60px;
+.login-btn {
+  padding: 15px 20px;
+  background-color: #818386b0;
 }
 
-#botones>button{
-    border: none;
-    font-size: 18px;
-    font-weight: 600;
-    cursor: pointer;
+.freetrial-btn {
+  padding: 15px 30px;
+  background-color: #000;
+  color: #fff;
 }
 
-.login-btn{
-    padding: 15px 20px;
-    background-color: #818386b0;
+.login-btn:hover {
+  background-color: #5c5d5fb0;
 }
 
-.freetrial-btn{
-    padding: 15px 30px;
-    background-color: #000;
-    color: #fff;
-
+.freetrial-btn:hover {
+  background-color: #1f1e1e;
 }
 
-.login-btn:hover{
-    background-color: #5c5d5fb0;
+#hero {
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 100px;
+  padding: 20px;
+  -webkit-box-shadow: -19px 20px 59px 11px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -19px 20px 59px 11px rgba(0, 0, 0, 0.75);
+  box-shadow: -19px 20px 59px 11px rgba(0, 0, 0, 0.75);
+  border-radius: 20px;
+  width: 1400px;
+  padding: 50px;
 }
 
-.freetrial-btn:hover{
-    background-color: #1f1e1e;
+#presentacion {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: center;
+}
 
+.barrita {
+  width: 400px;
+  height: 5px;
+  background-color: #000;
+  border-radius: 5px;
+}
+
+#presentacion > h1 {
+  font-size: 50px;
+  width: 380px;
+  text-align: left;
+  font-family: "Bebas Neue", sans-serif;
+}
+
+#presentacion > p {
+  text-align: left;
+  font-size: 23px;
+  width: 450px;
+  font-weight: 600;
+}
+
+#presentacion > a {
+  background-color: #000;
+  padding: 20px;
+  width: 150px;
+  color: #fff;
+  text-align: center;
+  font-weight: 600;
+  transition: all 500ms ease-in-out;
+}
+
+#presentacion > a:hover {
+  transition: all 500ms ease-in-out;
+  transform: scale(1.1);
+  background-color: #1f1e1e;
+}
+
+.imagen {
+  width: 800px;
+  border-radius: 50px;
+}
+
+#contacto {
+  background-color: #e7e7e7;
+  display: flex;
+  width: 1200px;
+  padding: 50px;
+  gap: 1rem;
+  border-radius: 50px;
+  position: relative;
+}
+
+#workwus {
+  position: absolute;
+  text-transform: uppercase;
+  left: -200px;
+  bottom: 200px;
+  z-index: 10;
+  font-size: 100px;
+  font-weight: 900;
+}
+
+#workwus2 {
+  position: absolute;
+  text-transform: uppercase;
+  left: -200px;
+  bottom: 100px;
+  z-index: 10;
+  font-size: 100px;
+  font-weight: 900;
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  width: 100%;
+  height: 100%;
+}
+
+#form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 3.5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+#form-container > input {
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #615f5f;
+  font-size: 18px;
+  padding: 10px;
+  background-color: #e7e7e7;
+  color: #615f5f;
+}
+
+#btn-submit {
+  background-color: #000;
+  padding: 20px;
+  width: 120px;
+  color: #fff;
+  text-align: center;
+  font-weight: 600;
+  font-size: 15px;
+  outline: none;
+  border: none;
+}
+
+#btn-submit:hover {
+  background-color: #1f1e1e;
+}
+
+#form > h3 {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 50px;
+}
+
+.img-cards {
+  width: 100%;
+}
+
+#cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
+  width: 1500px;
+}
+#card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  background-color: #e7e7e7;
+  width: 600px;
+  gap: 1rem;
+  border-radius: 10px;
+  -webkit-box-shadow: -1px 18px 42px -3px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 18px 42px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 18px 42px -3px rgba(0, 0, 0, 0.75);
+  padding-bottom: 10px;
+}
+
+#card > p {
+  font-size: 18px;
+  width: 300px;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  background-color: #000;
+  color: #fff;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  padding: 15px;
+  text-align: left;
+  height: 230px;
+  width: 100%;
+}
+
+footer > input {
+  width: 210px;
+  outline: none;
+}
+#logos > picture {
+  background-color: #1d1c1c;
+  padding: 5px;
+  border-radius: 100%;
+}
+.img-socialmedialogo {
+  width: 20px;
+  height: 20px;
+}
+
+#logos {
+  display: flex;
+  gap: 1rem;
+}
+
+.columnas {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  height: 160px;
+}
+
+.columnas > ul > li > a {
+  font-size: 13px;
+  color: #383737;
+}
+.columnas > h6 {
+  font-size: 13px;
+  color: #383737;
+}
+
+.columnas > picture > img {
+  width: 40px;
+}
+
+.columnas > picture > h5 {
+  font-size: 12px;
+  font-weight: 800;
+}
+
+.btn-vermas {
+  background-color: #000;
+  color: #fff;
+  padding: 10px 20px;
+}
+
+.btn-vermas:hover {
+  background-color: #383737;
 }
